--- a/views/inventorycount/inventorycount.ejs
+++ b/views/inventorycount/inventorycount.ejs
@@ -1,4 +1,4 @@
-<div class="modal fade " id="transfer-details-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<!-- <div class="modal fade " id="transfer-details-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header custom-bg">
@@ -37,7 +37,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 
 <!-- Begin PCreated by Content -->
 <div class="container-fluid">
@@ -46,13 +46,13 @@
         <div class="col-lg-12">
             <div class="card">
                 <div class="card-header py-3 header-bg">
-                    <h6 class="m-0 font-weight-bold">Transfer Order</h6>
+                    <h6 class="m-0 font-weight-bold">Inventory Count</h6>
                 </div>
                 <div class="card-body extend">
                     <div class="row mb-2">
                         <div class="col-md-6">
                             <div class="row">
-                                <label for="" class="ml-3">Transfer Location</label>
+                                <label for="" class="ml-3">Inventory</label>
                             </div>
                             <div class="row">
                                 <div class="col-6">
