--- a/views/materialcost/materialcost.ejs
+++ b/views/materialcost/materialcost.ejs
@@ -2,7 +2,7 @@
 <div class="modal fade " id="materialcostModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <div class="modal-header custom-bg text-white">
+            <div class="modal-header custom-bg">
                 <h5 class="modal-title" id="exampleModalLabel">Material Cost</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
@@ -11,7 +11,7 @@
             <div class="custom-modal-body">
                 <div class="card shadow">
                     <div class="card-header py-2 header-bg">
-                        <h6 class="m-0 font-weight-bold table-title text-white">Update Materials: </h6>
+                        <h6 class="m-0 font-weight-bold table-title">Update Materials: </h6>
                     </div>
                     <div class="card-body">
                         <div class="row mb-2">
@@ -60,7 +60,7 @@
         <div class="col-lg-12">
             <div class="card">
                 <div class="card-header py-3 header-bg">
-                    <h6 class="m-0 font-weight-bold text-white">Material Cost</h6>
+                    <h6 class="m-0 font-weight-bold">Material Cost</h6>
                 </div>
                 <div class="card-body extend">
                     <div class="row mb-2">
@@ -113,7 +113,7 @@
     <div class="card-header py-3 header-bg">
         <div class="row">
             <div class="col-md-6">
-                <h6 class="mt-2 font-weight-bold table-title text-white">Material Data:</h6>
+                <h6 class="mt-2 font-weight-bold table-title">Material Data:</h6>
             </div>
             <div class="col-md-6">
                 <div class="input-group">
