--- a/views/purchaseorder/purchaseorder.ejs
+++ b/views/purchaseorder/purchaseorder.ejs
@@ -1,7 +1,7 @@
 <div class="modal fade " id="order-details-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <div class="modal-header custom-bg text-white">
+            <div class="modal-header custom-bg">
                 <h5 class="modal-title" id="exampleModalLabel">Order Details</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
@@ -10,7 +10,7 @@
             <div class="custom-modal-body">
                 <div class="card shadow table-size">
                     <div class="card-header py-3 header-bg">
-                        <h6 class="m-0 font-weight-bold table-title text-white">Order Details Data:</h6>
+                        <h6 class="m-0 font-weight-bold table-title">Order Details Data:</h6>
                     </div>
                     <div class="card-body">
                         <div class="table-responsive scrollable-table-container">
@@ -47,7 +47,7 @@
         <div class="col-lg-12">
             <div class="card">
                 <div class="card-header py-3 header-bg">
-                    <h6 class="m-0 font-weight-bold text-white">Purchase Order</h6>
+                    <h6 class="m-0 font-weight-bold">Purchase Order</h6>
                 </div>
                 <div class="card-body extend">
                     <div class="row mb-2">
@@ -147,7 +147,7 @@
     <div class="card-header py-3 header-bg">
         <div class="row">
             <div class="col-md-6">
-                <h6 class="mt-2 font-weight-bold table-title text-white">Purchase Order Data:</h6>
+                <h6 class="mt-2 font-weight-bold table-title">Purchase Order Data:</h6>
             </div>
             <div class="col-md-6">
                 <div class="input-group">
