--- a/views/salesdetails/salesdetails.ejs
+++ b/views/salesdetails/salesdetails.ejs
@@ -1,7 +1,7 @@
 <div class="modal fade " id="sales-details-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <div class="modal-header custom-bg text-white">
+            <div class="modal-header custom-bg">
                 <h5 class="modal-title" id="exampleModalLabel">Sales Items</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
@@ -10,7 +10,7 @@
             <div class="custom-modal-body">
                 <div class="card shadow table-size">
                     <div class="card-header py-3 header-bg">
-                        <h6 class="m-0 font-weight-bold table-title text-white">Sales Items Data:</h6>
+                        <h6 class="m-0 font-weight-bold table-title">Sales Items Data:</h6>
                     </div>
                     <div class="card-body">
                         <div class="table-responsive scrollable-table-container">
@@ -46,7 +46,7 @@
         <div class="col-lg-12">
             <div class="card">
                 <div class="card-header py-3 header-bg">
-                    <h6 class="m-0 font-weight-bold text-white">Sales Details Filter</h6>
+                    <h6 class="m-0 font-weight-bold">Sales Details Filter</h6>
                 </div>
                 <div class="card-body extend">
                     <div class="row mb-2">
@@ -94,7 +94,7 @@
         <div class="card-header py-3 header-bg">
             <div class="row">
                 <div class="col-md-6">
-                    <h6 class="mt-2 font-weight-bold table-title text-white">Sales Details Data:</h6>
+                    <h6 class="mt-2 font-weight-bold table-title">Sales Details Data:</h6>
                 </div>
                 <div class="col-md-6">
                     <div class="input-group">
