--- a/views/shiftreports/shiftreports.ejs
+++ b/views/shiftreports/shiftreports.ejs
@@ -4,7 +4,7 @@
         <div class="card-header py-3 header-bg">
             <div class="row">
                 <div class="col-md-6">
-                    <h6 class="mt-2 font-weight-bold table-title text-white">Shift Reports Data:</h6>
+                    <h6 class="mt-2 font-weight-bold table-title">Shift Reports Data:</h6>
                 </div>
                 <div class="col-md-6">
                     <div class="input-group">
