--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -110,7 +110,7 @@
     <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseInventory"
             aria-expanded="true" aria-controls="collapseInventory">
-            <i class="fas fa-hand-holding-usd text-white"></i>
+            <i class="fas fa-boxes text-white"></i>
             <span class="text-white">Inventory</span>
         </a>
         <div id="collapseInventory" class="collapse" aria-labelledby="headingTransactions"
@@ -123,11 +123,11 @@
                 <a class="collapse-item" href="/transferorder">
                     <span>Transfer Orders</span>
                 </a>
-                <a class="collapse-item" href="#">
-                    <span>Stock Adjustment</span>
+                <a class="collapse-item" href="/inventorycount">
+                    <span>Inventory Counts</span>
                 </a>
                 <a class="collapse-item" href="#">
-                    <span>Inventory Counts</span>
+                    <span>Stock Adjustment</span>
                 </a>
                 <a class="collapse-item" href="#">
                     <span>Inventory History</span>
