--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -5,34 +5,54 @@
   --clr-4: #FFF6E0;
 
   --clr-font-white: #fff;
-  --clr-font-black: #000;
+  --clr-font-color: #1F1F1F;
   --clr-font: white;
   --clr-icons: #E8E8E8;
-  --clr-cardheader-bg: #AD877B;
+  --clr-cardheader-bg: #ffffff;
   --clr-tableheader-bg: #584c4c;
-  --clr-sidebar-bg: #483434;
+  --clr-sidebar-bg: rgb(43, 62, 66);
 
-  --clr-body-bg: #FFFF;
+  --clr-body-bg: rgb(242, 242, 242);
 
   --bg-clr: #6d1825;
   --clr-5: #313638;
-  --clr-6: #483434;
+  --clr-6: #34B1AA;
   --clr-7: #d82a27;
   --clr-8: #992d3e;
-  --clr-btn: #483434;
+  --clr-btn: #34B1AA;
   --clr-9: #ffb2bd;
   --clr-10: #ffffff;
 
   --ff-main: 'Open Sans', sans-serif;
-  --ff-side: 'Work Sans', sans-serif;
+  --ff-side: 'Manrope', sans-serif;
   --clr-rs-1: #4C3A51;
   
   --fw-700: '700';
 }
+/* Font Styling */
+
+.toggle-view {
+  display: none;
+}
+
+.toggle-view {
+  display: none;
+  opacity: 0;
+  height: 0;
+  overflow: hidden;
+  transition: opacity 0.5s ease, height 0.5s ease; 
+}
+
+.custom-checkbox input[type="checkbox"] {
+  width: 20px;
+  height: 20px; 
+  margin-right: 10px; 
+}
+
 
 .product-image{
   border: solid 1px var(--clr-btn);
-  border-radius: 0.375rem;
+  border-radius: 0.275rem;
 }
 
 .img-thumbnail{
@@ -49,7 +69,7 @@
 }
 
 .yearly-chart{
-  height: 375px;
+  height: 275px;
 }
 
 .dashboard-size{
@@ -88,7 +108,6 @@
 
 body {
   margin: 0px;
-padding-right: 10px;
   font-family: var(--ff-side) !important;
   background-color: var(--clr-body-bg) !important;
 }
@@ -157,12 +176,12 @@ a {
 /* --- SIDEBAR --- */
 
 .collapse-item.active {
-  background-color: var(--clr-sidebar-bg) !important;
+  background-color: var(--clr-6) !important;
   color: var(--clr-font-white) !important;
 }
 
 .sidebar-bg{
-  background-color: var(--clr-sidebar-bg) !important;
+  background: linear-gradient(to bottom, #2e4044,  #34B1AA) !important;
   background-size: cover;
 }
 
@@ -182,12 +201,11 @@ a {
 .topbar-bg{
   background-color: var(--clr-cardheader-bg);
   padding: 10px;
-  border-radius: 0.375rem;
-  border: 3px solid var(--clr-sidebar-bg);
+  border-radius: 0.275rem;
 }
 
 .topbar{
-  margin: 0px 0px 10px 10px;
+  margin: 0px 10px 10px 10px;
 }
 
 #content-wrapper{
@@ -198,7 +216,7 @@ a {
 
 .container-fluid{
   padding-left: 0.75rem !important; 
-  padding-right: 0rem !important;
+  padding-right: 10px !important;
 }
 
 /* BUTTONS */
@@ -215,7 +233,7 @@ a {
 }
 
 .btn:focus{
-  box-shadow: 0 0 0 0.2rem rgb(223 78 78 / 25%) !important;
+  box-shadow: 0 0 0 0.2rem rgb(255, 209, 141) !important;
 }
 
 .btn-outline-inventory{
@@ -241,22 +259,28 @@ a {
 }
 
 /* CARD STYLE*/
-
-.header-bg{
-  background-color: var(--clr-cardheader-bg) !important;
-  border-bottom: 2px solid var(--clr-sidebar-bg) !important;
+.card-title{
+  font-style: normal;
+  font-weight: 800;
+  font-size: 16px;
+  line-height: 22px;
+  color: var(--clr-font-color);
+  margin-bottom: 0 !important;
 }
 
-.card-header:first-child{
-  border-radius: 0 !important;
+.card-header{
+  background-color: transparent !important;
+  border: none !important;
 }
 
-.card{
-  border: 3px solid var(--clr-sidebar-bg) !important;
-  background-color: var(--clr-font-white) !important; 
+ */
+ .card{
+  border-radius: 0.275rem !important;
 }
 
-
+.table-size-lg{
+  height: 825px !important;
+}
 
 .table-size{
   height: 625px !important;
@@ -286,9 +310,9 @@ a {
 
 /* TABLES STYLE */
 
-.table-bordered td, .table-bordered th {
+/* .table-bordered td, .table-bordered th {
   border: 1px solid var(--clr-btn) !important;
-}
+} */
 
 .date-width{
   width: 300px !important;
@@ -297,7 +321,7 @@ a {
 th{
   text-align: center !important;
   white-space: nowrap !important;
-  color: white;
+  color: var(--clr-font-color);
 }
 
 td{
@@ -305,9 +329,13 @@ td{
   vertical-align: middle!important;
 }
 
-
 .tr-hover:hover{
   background-color: var(--clr-3);
+}
+
+.scrollable-table-container-lg{
+  max-height: 670px !important; 
+  overflow-y: auto !important;
 }
 
 .scrollable-table-container {
@@ -323,55 +351,71 @@ td{
 .table-header {
   position: sticky;
   top: 0;
-  background-color: var(--clr-tableheader-bg);
+  background-color: white;
   z-index: 1;
 }
 
 /* MEDIA QUERIES */
 @media (max-width: 767px) {
+  .topbar-bg{
+    background: linear-gradient(to right, #2e4044,  #34B1AA) !important;
+  }
 
-    .modal{
-      margin-top: 0px !important;
-    }
-  
-    .responsive-wrap{
-      white-space: pre-wrap !important;
-    }
+  .container-fluid{
+    padding-right: 0 !important;
+  }
+
+  .topbar{
+    margin: 0px 0px 10px 10px;
+  }
+
+  .mobile-hidden{
+    display: none;
+  }
+
+  .modal{
+    margin-top: 0px !important;
+  }
+
+  .responsive-wrap{
+    white-space: pre-wrap !important;
+  }
+
   /* --IMPORTANT-- */
-    .bmss-link{
-      color: var(--clr-9) !important;
-    }
+  .bmss-link{
+    color: var(--clr-9) !important;
+  }
 
-    .custom-mobile-table thead{
-      display: none;
-    }
+  .custom-mobile-table thead{
+    display: none;
+  }
 
-    .custom-mobile-table, .custom-mobile-table tbody, .custom-mobile-table tr, .custom-mobile-table td{
-      display: block;
-      width: 100%;
-    }
-    .custom-mobile-table tr{
-      margin-bottom:15px;
-    }
-    .custom-mobile-table .custom-mobile-align{
-      padding-left: 50%;
-      position: relative;
-    }
-    .custom-mobile-table .custom-mobile-align::before{
-      content: attr(data-label)": ";
-      position: absolute;
-      left:0;
-      width: 50%;
-      padding-left:15px;
-      font-size:15px;
-      font-weight: bold;
-      text-align: left;
-    }
+  .custom-mobile-table, .custom-mobile-table tbody, .custom-mobile-table tr, .custom-mobile-table td{
+    display: block;
+    width: 100%;
+  }
+  .custom-mobile-table tr{
+    margin-bottom:15px;
+  }
+  .custom-mobile-table .custom-mobile-align{
+    padding-left: 50%;
+    position: relative;
+  }
+  .custom-mobile-table .custom-mobile-align::before{
+    content: attr(data-label)": ";
+    position: absolute;
+    left:0;
+    width: 50%;
+    padding-left:15px;
+    font-size:15px;
+    font-weight: bold;
+    text-align: left;
+  }
 
-    .custom-mobile-table tbody tr:nth-child(even){
-        background-color: var(--clr-2) !important;
-        color: var(--clr-font-white);
-    }
+  .custom-mobile-table tbody tr:nth-child(even){
+      background-color: var(--clr-6) !important;
+      color: var(--clr-font-white);
+  }
   /* --IMPORTANT-- */
 
     .bg-options{
@@ -413,7 +457,7 @@ td{
     }
     
     .sidebar{
-      border-radius: 0 0.375rem 0.375rem 0;
+      border-radius: 0 0.275rem 0.275rem 0;
     }
 }
 
@@ -446,7 +490,7 @@ td{
   background-color: white;
   width: 36.7vw;
   z-index: 1000;
-  border-radius: 0.375rem;
+  border-radius: 0.275rem;
 }
 
 .dropdown-option {
