--- a/views/dashboard/dashboard.ejs
+++ b/views/dashboard/dashboard.ejs
@@ -4,32 +4,32 @@
 <div class="row">
     <div class="col-lg-7 padding-fix mb-2 ">
         <div class="asvesti-border">
-            <div class="card">
+            <div class="card dashboard-size">
                 <div class="card-header py-3 header-bg">
-                    <h6 class="m-0 font-weight-bold text-white">Best Sellers: <span id="bestSellersFilterLabel">Daily</span></h6>
+                    <h4 class="m-0 card-title">Best Sellers: <span id="bestSellersFilterLabel">Daily</span></h4>
                 </div>
                 <div class="card-body">
                     <div style="width: 100%; margin: auto; height: 300px;" id="chartContainer">
                         <canvas class="chartbox" id="myChart"></canvas>
                     </div>
                     <div class="text-center w-100" id="noDataMessage" style="display: none;">
-                        <p >No Current Sales Today.</p>
+                        <p >No Current Sales.</p>
                     </div>
                 </div>      
                 <div class="row mx-1 mb-4">
 
                     <div class="col">
-                        <button id="daily" name="daily" class="btn btn-sm btn-outline-inventory shadow-sm w-100">
+                        <button id="daily" name="daily" class="btn btn-outline-inventory shadow-sm w-100">
                             Current Day
                         </button> 
                     </div>
                     <div class="col">
-                        <button id="monthly" name="monthly" class="btn btn-sm btn-outline-inventory shadow-sm w-100">
+                        <button id="monthly" name="monthly" class="btn btn-outline-inventory shadow-sm w-100">
                             Current Month
                         </button> 
                     </div>
                     <div class="col">
-                        <button id="yearly" name="yearly" class="btn btn-sm btn-outline-inventory shadow-sm w-100">
+                        <button id="yearly" name="yearly" class="btn btn-outline-inventory shadow-sm w-100">
                             Current Year
                         </button> 
                     </div>
@@ -40,19 +40,36 @@
     <div class="col-lg-5 mb-2">
         <div class="card dashboard-size">
             <div class="card-header py-3 header-bg">
-                <h6 class="header m-0 font-weight-bold text-white"><span class="text-white" id="currentFilterLabel">Daily</span> Sales</h6>
+                <div class="row">
+                    <div class="col-4">
+                        <h6 class="card-title mt-1"><span id="currentFilterLabel">Daily</span> Sales</h6>
+                    </div>
+                    <div class="col-8">
+                        <div class="row ">
+                            <div class="col-8">
+                                <div class="input-group">
+                                    <input type="text" class="form-control bg-light small"
+                                        placeholder="Search for..." aria-label="Search"
+                                        aria-describedby="basic-addon2" id="search-input">
+                                    <div class="input-group-append">
+                                        <button class="btn sis-btn-color" type="button" id="search-button">
+                                            <i class="fas fa-search fa-sm"></i>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <button class="btn btn-outline-inventory ml-2" id="export-button">
+                                    <i class="fas fa-download fa-sm"></i>
+                                    <span class="mobile-hidden">Export</span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
             </div>
             <div class="card-body">
-                <div class="input-group mb-2">
-                    <input type="text" class="form-control bg-light small"
-                        placeholder="Search for..." aria-label="Search"
-                        aria-describedby="basic-addon2" id="search-input">
-                    <div class="input-group-append">
-                        <button class="btn sis-btn-color" type="button" id="search-button">
-                            <i class="fas fa-search fa-sm"></i>
-                        </button>
-                    </div>
-                </div>
                 <div class="table-responsive scrollable-dashboard-table-container">
                     <table class="table table-bordered custom-mobile-table" id="sales-dataTable" width="100%" cellspacing="10">
                         <thead class="table-header">
@@ -73,9 +90,9 @@
 </div>
 
     <!-- DataTales Example -->
-<div class="card mb-2">
+<div class="card dashboard-size mb-2">
     <div class="card-header py-3 header-bg">
-        <h6 class="m-0 font-weight-bold table-title text-white">Current Year Sales</h6>
+        <h6 class="m-0 font-weight-bold table-title">Current Year Sales</h6>
     </div>
     <div class="card-body yearly-chart">
         <canvas id="salesChart"></canvas>
@@ -83,7 +100,7 @@
 </div>
 <div class="card mb-2">
     <div class="card-header py-3 header-bg">
-        <h6 class="m-0 font-weight-bold table-title text-asvesti">Shift Reports</h6>
+        <h6 class="m-0 font-weight-bold table-title">Shift Reports</h6>
     </div>
     <div class="card-body">
         
