--- a/views/dashboard/dashboardscripts.ejs
+++ b/views/dashboard/dashboardscripts.ejs
@@ -99,7 +99,11 @@
                                             label: 'Total Sales',
                                             data: totalQuantity,
                                             backgroundColor: [
-                                                'rgb(72, 52, 52, 0.85)'
+                                                'rgb(87, 125, 134)',
+                                                'rgb(86, 157, 170)',
+                                                'rgb(135, 203, 185)',
+                                                'rgb(100, 204, 197, 0.75)',
+                                                'rgb(185, 237, 221)',
                                             ],
                                         }]
                                     };
@@ -111,6 +115,7 @@
                                             maintainAspectRatio: false,
                                             scales: {
                                                 x: {
+                                                    barPercentage: 0.5,
                                                     grid: {
                                                         display: false,
                                                     },
@@ -297,10 +302,6 @@
 
             const ctx = document.getElementById('salesChart').getContext('2d');
 
-            const gradient = ctx.createLinearGradient(0, 0, 0, ctx.canvas.height);
-            gradient.addColorStop(0, 'rgba(72, 52, 52, 0.85)'); 
-            gradient.addColorStop(1, 'rgba(72, 52, 52, 0.05)');   
-
             const chart = new Chart(ctx, {
                 type: 'line',
                 data: {
@@ -308,8 +309,8 @@
                     datasets: [{
                         label: 'Total Monthly Sales ₱',
                         data: quantities, 
-                        borderColor: 'rgb(72, 52, 52, 0.80)',
-                        backgroundColor: gradient,
+                        borderColor: 'rgb(100, 204, 197, 0.80)',
+                        backgroundColor: 'rgb(100, 204, 197, 0.10)',
                         borderWidth: 2, 
                         fill: true,
                         lineTension: 0.4
@@ -322,14 +323,10 @@
                             grid: {
                                 display: false,
                             },
+                            offset: true, // Enable x-axis offset
                         },
                         y: {
-                            beginAtZero: true,
-                            ticks: {
-                                callback: function(value) {
-                                    return '₱' + value.toLocaleString(); 
-                                }
-                            }
+                            display: false, 
                         },
                     }
                 }
