--- a/views/employees/employeesscripts.ejs
+++ b/views/employees/employeesscripts.ejs
@@ -136,20 +136,19 @@ $(document).ready(function () {
         }
     }
 
-    
     function LoadTable() {
         $.ajax({
             url: '/employees/load',
             method: 'GET',
             dataType: 'json',
-            success: function(data) {
+            success: function (data) {
                 if (data.msg === 'success') {
                     populateEmployeesTable(data.data);
                 } else {
                     console.error(data.msg);
                 }
             },
-            error: function(error) {
+            error: function (error) {
                 console.error(error);
             }
         });
@@ -408,7 +407,28 @@ $(document).ready(function () {
     LoadList()
 
     setupCustomDropdown("positionname", "positionDropdown", "dropdown-option");
-        
-    }
-)
+
+    const toggleButton = document.getElementById("toggleButton");
+
+    const toggleView = document.querySelector(".toggle-view");
+
+    toggleButton.addEventListener("click", function() {
+        if (toggleView.style.display === "none" || toggleView.style.display === "") {
+            toggleView.style.display = "block";
+            setTimeout(() => {
+                toggleView.style.opacity = "1";
+                toggleView.style.height = "auto";
+            }, 10);
+            toggleButton.innerHTML = '<i class="fas fa-chevron-up"></i>';
+        } else {
+            toggleView.style.opacity = "0";
+            toggleView.style.height = "0";
+            setTimeout(() => {
+                toggleView.style.display = "none";
+            }, 500); 
+            toggleButton.innerHTML = '<i class="fas fa-chevron-right"></i>';
+        }
+    });
+
+})
 </script>
