--- a/views/position/position.ejs
+++ b/views/position/position.ejs
@@ -2,7 +2,7 @@
 <div class="modal fade " id="positionModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <div class="modal-header custom-bg text-white">
+            <div class="modal-header custom-bg">
                 <h5 class="modal-title" id="exampleModalLabel">Position</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
@@ -11,7 +11,7 @@
             <div class="custom-modal-body">
                 <div class="card shadow">
                     <div class="card-header py-2 header-bg">
-                        <h6 class="m-0 font-weight-bold table-title text-white">Update Position: </h6>
+                        <h6 class="m-0 font-weight-bold table-title">Update Position: </h6>
                     </div>
                     <div class="card-body">
                         <div class="row mb-2">
@@ -50,7 +50,7 @@
         <div class="col-lg-12">
             <div class="card">
                 <div class="card-header py-3 header-bg">
-                    <h6 class="m-0 font-weight-bold text-white">Position Type</h6>
+                    <h6 class="m-0 font-weight-bold">Position Type</h6>
                 </div>
                 <div class="card-body extend">
                     <div class="row">
@@ -79,7 +79,7 @@
     <div class="card-header py-3 header-bg">
         <div class="row">
             <div class="col-md-6">
-                <h6 class="mt-2 font-weight-bold table-title text-white">Position Data:</h6>
+                <h6 class="mt-2 font-weight-bold table-title">Position Data:</h6>
             </div>
             <div class="col-md-6">
                 <div class="input-group">
@@ -104,8 +104,8 @@
                         <th class = "col-3">Position Name</th>
                         <th class = "col-3">Created by</th>
                         <th class = "col-2">Created date</th>
-                        <th class = "col-1">Status</th>
-                        <th class = "col-2">Action</th>               
+                        <th class = "col-2">Status</th>
+                        <th class = "col-1">Action</th>               
                     </tr>
                 </thead>          
                 <tbody>
