--- a/views/systemlogs/systemlogs.ejs
+++ b/views/systemlogs/systemlogs.ejs
@@ -3,7 +3,7 @@
         <div class="card-header py-3 header-bg">
             <div class="row">
                 <div class="col-md-6">
-                    <h6 class="mt-2 font-weight-bold table-title text-white">System Logs Data:</h6>
+                    <h6 class="mt-2 font-weight-bold table-title">System Logs Data:</h6>
                 </div>
                 <div class="col-md-6">
                     <div class="input-group">
