--- a/views/topbar.ejs
+++ b/views/topbar.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand navbar-light topbar-bg topbar static-top shadow mt-2">
+<nav class="navbar navbar-expand navbar-light topbar-bg topbar static-top mt-2 pr-">
 
     <!-- Sidebar Toggle (Topbar) -->
     <button id="sidebarToggleTop" class="btn topbar-btn-clr d-md-none rounded-circle mr-3">
@@ -9,7 +9,7 @@
     <form
         class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
         <div class="input-group">
-            <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
+            <input type="text" class="form-control bg-light small" placeholder="Search for..."
                 aria-label="Search" aria-describedby="basic-addon2">
             <div class="input-group-append">
                 <button class="btn sis-btn-color" type="button">
@@ -63,7 +63,7 @@
                 <a class="dropdown-item d-flex align-items-center" href="#">
                     <div class="mr-3">
                         <div class="icon-circle bg-primary">
-                            <i class="fas fa-file-alt text-white"></i>
+                            <i class="fas fa-file-alt"></i>
                         </div>
                     </div>
                     <div>
@@ -74,7 +74,7 @@
                 <a class="dropdown-item d-flex align-items-center" href="#">
                     <div class="mr-3">
                         <div class="icon-circle bg-success">
-                            <i class="fas fa-donate text-white"></i>
+                            <i class="fas fa-donate"></i>
                         </div>
                     </div>
                     <div>
@@ -85,7 +85,7 @@
                 <a class="dropdown-item d-flex align-items-center" href="#">
                     <div class="mr-3">
                         <div class="icon-circle bg-warning">
-                            <i class="fas fa-exclamation-triangle text-white"></i>
+                            <i class="fas fa-exclamation-triangle"></i>
                         </div>
                     </div>
                     <div>
@@ -169,7 +169,7 @@
         <li class="nav-item dropdown no-arrow">
             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span class="mr-2 d-none d-lg-inline text-white small"><%= fullname%></span>
+                <span class="mr-2 d-none d-lg-inline text-gray-600 small"><%= fullname%></span>
                 <img class="img-profile rounded-circle"
                     src="/images/img/pngwing.com.png">
             </a>
